// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`agxRemarkRehype > should allow Angular control flow syntax without escaping 1`] = `
"<h2>Test</h2>
<p>Hello</p>
<p>@for(quiz of quizzes; track $index){
<Quiz [id]="quiz.id" [questionText]="quiz.questionText" [answers]="quiz.answers" />
}</p>"
`;

exports[`agxRemarkRehype > should allow embedding components without escaping 1`] = `
"<h2>Test</h2>
<p>Hello</p>
<my-angular-component />
<my-angular-component></my-angular-component>"
`;

exports[`agxRemarkRehype > should allow supplying plugins with options 1`] = `
"<h2>Test</h2>
<p>bye</p>
<ul>
<li>bye</li>
<li>bye</li>
<li>bye</li>
</ul>"
`;

exports[`agxRemarkRehype > should allow supplying rehype plugins 1`] = `
"<h2>Test</h2>
<p>hi</p>
<ul>
<li>one</li>
<li>two</li>
<li>three</li>
</ul>"
`;

exports[`agxRemarkRehype > should allow supplying remark plugins 1`] = `
"<h2>Test</h2>
<p>hi</p>
<ul>
<li>hi</li>
<li>hi</li>
<li>hi</li>
</ul>"
`;

exports[`agxRemarkRehype > should escape characters that break Angular templates 1`] = `
"<h2>Test</h2>
<p>Hello
Watch out for &#64; characters, they upset Angular. A &#x2774; can be quite scary too.</p>
<pre><code class="language-ts">&#x2774;&#x2775;
&#64;
</code></pre>"
`;

exports[`agxRemarkRehype > should return standard markdown unmodified 1`] = `
"<h2>Test</h2>
<p>Hello</p>
<ul>
<li>one</li>
<li>two</li>
<li>three</li>
</ul>"
`;
